fix: reduce biz-column gap to 30px

--- a/src/app/pages/channel/channel-view/channel-view.component.less
+++ b/src/app/pages/channel/channel-view/channel-view.component.less
@@ -90,7 +90,7 @@
 .biz-column {
   display: flex;
   flex-direction: column;
-  gap: 80px;
+  gap: 30px;
   margin-right: 100px;
 }
 
